# LiteGraph-MCP

./: .env.example  README.md  package.json  pyproject.toml  server.py
src/: config.py  mcp_server.py
src/clients/: embedding.py  feishu_mcp.py  llm.py
src/graph/: manager.py
src/indexing/: __init__.py  code_chunker.py  snippet_index.py  snippet_updater.py
src/ingest/: __init__.py
src/retrieval/: hybrid_retriever.py
src/server/: __init__.py  agent_consumer.py  api.py  bridge_supervisor.py  config.py  graph_edit_service.py  main.py  relay.py  routes.py
src/tools/: graph_index_only_tool.py  question_manager.py  repo_map.py
ui/: package-lock.json  package.json  vite.config.ts
ui/data/: kg_graph.db
ui/src/: App.tsx  api.ts  index.css
ui/src/components/: ErrorBoundary.tsx  WikiLinkify.tsx
ui/src/pages/: ApprovalQueue.tsx  GraphExplorer.tsx  ProposalMonitor.tsx  QueryLab.tsx
